--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div id="title">
             <h1>Ricky Gervais</h1>
-            <p>#1 British Comedian</p>
+            <p>#1 British Comedian lol</p>
         </div>
 
         <div id="img-div">
