--- a/index.html
+++ b/index.html
@@ -14,40 +14,73 @@
     <div id="main">
 
         <div id="title">
-            <h1>Ricky Gervais</h1>
-            <p>#1 British Comedian lol</p>
+            <h1>Lamborghini</h1>
         </div>
 
         <div id="img-div">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/94/RickyGervaisBAFTA07.jpg/266px-RickyGervaisBAFTA07.jpg"
-                alt="Ricky Gervais photo" id="image">
+            <div id="image">
+                <img src="https://www.lamborghini.com/sites/it-en/files/DAM/it/models_gateway/blocks/special.png" alt="Lambo" id="no-border">
+            </div>
             <div id="img-caption">
-                Ricky Gervais is an English stand-up comedian, actor, writer, producer, director, and singer.
-                <hr>
+                <p>Automobili Lamborghini S.p.A. is an Italian brand and manufacturer of luxury sports cars and SUVs based in
+                    Sant'Agata Bolognese and tractors Lamborghini Trattori in Pieve di Cento, Italy.</p>
+                <p id="last-p">The company is owned by the Volkswagen Group through its subsidiary Audi.</p>
             </div>
         </div>
 
-        <div id="tribute-info">
-            <h2>Television</h2>
-            <ul>
-                <li>The Office</li>
-                <li>Extras</li>
-                <li>The Ricky Gervais Show</li>
-                <li>Life's Too Short</li>
-                <li>An Idiot Abroad</li>
-                <li>Derek</li>
-            </ul>
-        </div>
+        <section id="tribute-info">
+            <h2>Current Production Models</h2>
+            <div class="box-container-top">
+                <div class="box1">
+                    <div class="model">
+                        <img src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/model/aventador/aventador-s/header/aventador-s-header.jpg"
+                            alt="Aventador" id="image">
+                        <div id="img-caption">
+                            <h3>Aventador (2011)</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="box2">
+                    <div class="model">
+                        <img src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/model/huracan/huracan-coupe/gallery/huracan-coupe.jpg"
+                            alt="Huracan" id="image">
+                        <div id="img-caption">
+                            <h3>Huracan (2014)</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box-container-bottom">
+                <div class="box1">
+                    <div class="model">
+                        <img src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/model/one-off/centenario/gallery/centenario.jpg"
+                            alt="Ricky Gervais photo" id="image">
+                        <div id="img-caption">
+                            <h3>Centenario (2016)</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="box2">
+                    <div class="model">
+                        <img src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/model/URUS/pagina-urus/header.jpg" alt="Urus" id="image">
+                        <div id="img-caption">
+                            <h3>Urus (2018)</h3>
+                        </div>
+                    </div>
+                </div>
+        </section>
 
 
         <footer>
-            Find out more about Ricky Gervais by visiting his
-            <a href="https://en.wikipedia.org/wiki/Ricky_Gervais" target="_blank" id="tribute-link">Wikipedia</a>
+            For more info: take a look at the official
+            <a href="https://www.lamborghini.com" target="_blank" id="tribute-link">
+                Lamborghini
+            </a>
+            page
         </footer>
 
-
-
-    </div>
+        </div>
 </body>
 
 </html>
