--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="main">
 
         <div id="title">
-            <h1>Lamborghini</h1>
+            <h1>- Lamborghini -</h1>
         </div>
 
         <div id="img-div">
